main.css
/*
 * ─── IMPORT FONTS ───────────────────────────────────────────────────────────────
 */

 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
 
 /*
  * ────────────────────────────────────────────────────────────────────────────────
  */
 
 /*
  * ─── GLOBALS ────────────────────────────────────────────────────────────────────
  */
     
 * { 
     margin: 0;
     font-family: "Roboto", "Helvetica Neue";
 }
 
 body {
     background-color:whitesmoke;
 }
 
 /*
  * ────────────────────────────────────────────────────────────────────────────────
  */
 
 /*
  * ─── HEADER ─────────────────────────────────────────────────────────────────────
  */
 
 header {
     display: flex;
     flex-flow: column nowrap;
     width: auto;
     height: 100%;
     box-sizing: border-box;
     margin-bottom: 15px;
     padding-bottom: 10%;
 }
 
 nav {
     margin-top: 0;
     flex-shrink: 1;
     text-overflow: ellipsis;
     display: block;
 }
 
 #header-top {
     height: 156px;
     background-color:#191a1d;
     flex-shrink: 1;
 }
 
 #header-mid {
     display: flex;
     background-color:#191a1d;
     width: 100%;
     height: auto;
     padding-bottom: 32px;
     margin-top: 0;
     overflow: visible;
     flex-shrink: 1;
     flex-wrap: wrap;
     align-items: flex-end;
     position: relative;
 }
 
 #header-mid-inner {
     display: flex;
     flex-flow: row wrap;
     margin: 0;
     overflow: visible;
     box-sizing: border-box;
     height: 100%;
     width: 100%;
     max-width: 100vw;
     justify-content: center;
     align-items: flex-end;
 
 }
 
 #header-mid-inner-left {
     display: flex;
     margin: 15px;
     flex-flow: column nowrap;
     width: auto;
     max-width: 100%;
     height: auto;
     box-sizing: border-box;
     align-items: flex-start;
     flex-shrink: 1;
     text-overflow: ellipsis;
 }
 
 #header-name {
     color: white;
     font-size: 68px;
     font-weight: 400;
     display: inline;
     flex-shrink: 1;
     text-overflow: ellipsis;
     margin-top: 100px;
 }
 
 #header-desc {
     color: #a7a7a7;
     font-size: 42px;
     font-weight: 200;
     display: inline;
     margin-top: 0;
     flex-shrink: 1;
     text-overflow: ellipsis;
 }

/*
 * ─── HEADER: PROFILE ────────────────────────────────────────────────────────────
 */

 #header-mid-inner-right {
     display: flex;
     flex-flow: column nowrap;
     flex-shrink: 1;
     width: auto;
     max-width: 100%;
     height: auto;
     box-sizing: border-box;
     align-items: center;
     padding-left: 1%;
     margin: 0;
     justify-content: center;
     text-overflow: ellipsis;
 }
 
 #header-profile {
     display: flex;
     flex-flow: column nowrap;
     flex-shrink: 1;
     width: auto;
     height: auto;
     box-sizing: border-box;
     text-overflow: ellipsis;
 }
 
 #profile-title {
     color: white;
     font-size: 20px;
     font-weight: 400;
     display: inline;
     flex-shrink: 1;
     text-overflow: ellipsis;
 }
 
 #profile-prof {
     color: #a7a7a7;
     font-size: 16px;
     font-weight: 200;
     display: inline;
     flex-shrink: 1;
     text-overflow: ellipsis;
 }
 
 #social-icons-list {
     background-color: #191a1d;
     flex-wrap: wrap;
     width: auto;
     overflow: visible;
     height: auto;
     display: flex;
 }
 
/*
 * ─── HEADER: PROFILE - SOCIAL MEDIA ─────────────────────────────────────────────
 */
 
 .social-icons {
     text-overflow: ellipsis;
     max-width: 100%;
     display: inline;
     flex-shrink: 1;
     transition: all .2s ease-in-out;
 }
 
 .social-icons a {
     font-size: 2rem;
     color: white;
     padding: 10px 12px 0;
     display: inline-flex;
     height: 64px;
     text-decoration: none;
     margin: 7px;
     border-bottom: 3px solid #c9c9c9;
     transform-origin: center top;
 
 }
 
 .social-icons img { 
     padding-bottom: 16px; 
 }
 
 .social-icons a:hover { 
     transform: scale(1.2);
     border-top: 3px solid #c9c9c9;
 }
 
 /*
  * ─── HEADER: BOTTOM ─────────────────────────────────────────────────────────────
  */
 
 #header-arrowhead {
     display: flex;
     height: 75px;
     width: 100%;
     background-color: #191a1d;
     margin-top: 70px;
     clip-path: polygon(100% 0, 100% 0, 50% 100%, 0 0, 0 0);
 }
 
 /*
  * ────────────────────────────────────────────────────────────────────────────────
  */
 
  /*
   * ─── CONTENT / BODY ────────────────────────────────────────────────────────────
   */
 
 #main {
     width: auto;
     height: auto;
     box-sizing: border-box;
     padding-bottom: 20px;
 }
 
 h1 {
     display: flex;
     position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     bottom: auto;
     left: auto;
     width: 100%;
     font-weight: 100;
     text-align: center;
     margin-bottom: 2px;
     opacity: 0.7;
     background-color: whitesmoke;
     

 }
 
 .title-ul {
     display: flex;
     position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 1px;
     margin-bottom: 2%;
     background: linear-gradient(to right, transparent, #818078, transparent);
     opacity: 1;
 }
 
 .card {
     width: 50%;
     margin-left: 25%;
 }

 .disabled {
    opacity: 0.6;
    pointer-events: none;
}

 /*
  * ────────────────────────────────────────────────────────────────────────────────
  */
 
 /*
  * ─── MEDIA QUERIES ──────────────────────────────────────────────────────────────
  */
 
 @media only screen and (max-width: 1280px) {
     .title-ul { margin-bottom: 10%; }
     main { padding-top: 100px }
     .card {
         width: auto;
         margin-left: auto;
     }
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 134px; }
 }
 
 @media only screen and (max-width:1024px) {
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 134px; }
     /* Increase bottom padding for card columns on mobile */
     .col { padding-bottom: 32px; }
 
     /* Change to block buttons for mobile/tablet users. */
     button {
         display:block;
         width: 100%;
     }
 }
 
 @media only screen and (max-width: 912px) {
     main { padding-top: 100px }
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 134px; }
 }
 
 @media only screen and (max-width: 884px) {
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 156px; }
 }
 
 @media only screen and (max-width: 820px) {
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 267px; }
 }
 
 @media only screen and (max-width: 768px) {
     main { padding-top: 100px }
     .card {
         width: auto;
         margin-left: auto;
     }
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 267px; }
 }
 
 @media only screen and (max-width:414px) {
     main { margin-top: 0; }
     .card {
         width: auto;
         margin-left: auto;
     }
     #social-nav *  { font-size: 24px;}
     #header-mid { padding-top: 6px; }
     #header-arrowhead { margin-top: 334px; }
 }
 
 @media only screen and (max-width: 375px) {
     main { margin-top: 0; }
     .card {
         width: auto;
         margin-left: auto;
     }
     #social-nav *  { font-size: 24px;}
     #header-mid { padding-top: 6px; }
     #header-arrowhead { margin-top: 398px; }
 }
 
 @media only screen and (max-width: 360px) {
     main { margin-top: 0; }
     .card {
         width: auto;
         margin-left: auto;
     }
     #social-nav *  { font-size: 24px;}
     #header-mid { padding-top: 6px; }
     #header-arrowhead { margin-top: 428px; }
 }
 
 @media only screen and (max-width: 280px) {
     main { margin-top: 400px; }
     .card {
         width: auto;
         margin-left: auto;
     }
     #header-name, #header-desc { font-size: 32px; }
     #social-nav * { font-size: 24px;}
     #header-mid { padding-top: 64px; }
     #header-arrowhead { margin-top: 300px; }
 }

 /*
  * ────────────────────────────────────────────────────────────────────────────────
  */

